<?xml version="1.0"?>
<package>
  <name>thormang3_foot_step_generator</name>
  <version>0.2.0</version>
  <description>
    This package provides foot step generation for the thormang3.
  </description>
  <license>BSD</license>
  <author email="hjsong@robotis.com">Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="website">http://wiki.ros.org/thormang3_foot_step_generator</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_walking_module_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>thormang3_walking_module_msgs</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>thormang3_walking_module_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
